Updating Old File for core commit 70a6813c17c7114aa35abd8b43bd2084ec428ba5

--- a/help/release-notes/2021.md
+++ b/help/release-notes/2021.md
@@ -4,7 +4,7 @@ description: Versionshinweise zu CJA für 2021
 exl-id: 8647ebfc-59cf-44ab-8869-11e892eab84e
 feature: Release Notes
 source-git-commit: ac7181fe5629bf04b2f0c79358501a05cb99b02b
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '2005'
 ht-degree: 100%
 
@@ -47,11 +47,11 @@ ht-degree: 100%
 
 ## September 2021 {#0921}
 
-| Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/technotes/releases.html?lang=en) – geplantes Datum |
+| Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/technotes/releases.html?lang=de) – geplantes Datum |
 | ----------- | ---------- | ----- |
 | Deduplizierung der Metrik | Customer Journey Analytics (CJA) kann jetzt Instanzen einer Metrik deduplizieren. Wenn derselbe Wert in einer Spalte (entweder in derselben oder in einer anderen Spalte) angezeigt wird, können Sie die Erhöhung der Kennzahl verhindern. Deduplizierung verhindert eine Überzählung von Schlüsselmetriken und erhöht das Vertrauen in Ihre Daten. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/metric-deduplication.html?lang=de) | 16. September 2021 |
 | Unterstützung der Sommerzeit in Berichten | Alle Daten in CJA werden in UTC gespeichert (ohne spezifische Zeitzone). [!UICONTROL Data Views] in CJA kann jetzt Daten ändern, um die einstündige Erhöhung oder Verringerung aufgrund der Sommerzeit zu berücksichtigen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/create-dataview.html?lang=de#calendar) | 16. September 2021 |
-| [!UICONTROL Benutzerdefinierte Kalender] | Ermöglicht die Auswahl eines anderen Kalendertyps (z. B. [!UICONTROL retail 4-4-5]) für eine Datenansicht. Sie können mehrere Datenansichten erstellen, die auf derselben Verbindung basieren, um dieselben Daten in verschiedenen Kalenderformaten anzuzeigen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/create-dataview.html?lang=en#calendar) | 16. September 2021 |
+| [!UICONTROL Benutzerdefinierte Kalender] | Ermöglicht die Auswahl eines anderen Kalendertyps (z. B. [!UICONTROL retail 4-4-5]) für eine Datenansicht. Sie können mehrere Datenansichten erstellen, die auf derselben Verbindung basieren, um dieselben Daten in verschiedenen Kalenderformaten anzuzeigen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/create-dataview.html?lang=de#calendar) | 16. September 2021 |
 | Unterstützung von Booleschen Feldern | CJA unterstützt jetzt boolesche Felder. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/behavior.html?lang=de) | 16. September 2021 |
 | Neues Erlebnis bei [!UICONTROL Connections] Info | Diese Verbesserung der [!UICONTROL Connections]-Benutzeroberfläche informiert Sie darüber, ob und wann Ihre Daten für das Reporting verwendet werden können. Sie können damit auch jegliche Probleme bei der Datenverarbeitung nachverfolgen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/manage-connections.html?lang=de) | 20. September 2021 |
 
@@ -61,22 +61,22 @@ ht-degree: 100%
 
 | Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum |
 | ----------- | ---------- | ----- |
-| Neues Erlebnis zu Verbindungsinformationen | Diese Verbesserung der Verbindungs-Benutzeroberfläche informiert Sie darüber, ob und wann Ihre Daten für das Reporting verwendet werden können. Sie können damit auch jegliche Probleme bei der Datenverarbeitung nachverfolgen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/manage-connections.html?lang=en) | 19. August 2021 |
+| Neues Erlebnis zu Verbindungsinformationen | Diese Verbesserung der Verbindungs-Benutzeroberfläche informiert Sie darüber, ob und wann Ihre Daten für das Reporting verwendet werden können. Sie können damit auch jegliche Probleme bei der Datenverarbeitung nachverfolgen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/manage-connections.html?lang=de) | 19. August 2021 |
 | Kontrolle der Groß-/Kleinschreibung in Datenansichtsdimensionen | Mit dieser Einstellung können Sie steuern, ob bei Dimensionswerten in Customer Journey Analytics zwischen Groß- und Kleinschreibung unterschieden wird. Dies ermöglicht die Deduplizierung von Zeilen mit demselben Wert, jedoch einer anderen Groß-/Kleinschreibung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/create-dataview.html?lang=de#configure-behavior-settings) | 19. August 2021 |
 
 {style=&quot;table-layout:auto&quot;}
 
 ## Juli 2021 {#0721}
 
-| Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum |
+| Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum |
 | ----------- | ---------- | ----- |
-| Neues Erlebnis zu Verbindungsinformationen | Diese Verbesserung der Verbindungs-Benutzeroberfläche informiert Sie darüber, ob und wann Ihre Daten für das Reporting verwendet werden können. Sie können damit auch jegliche Probleme bei der Datenverarbeitung nachverfolgen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/manage-connections.html?lang=en) | 19. August 2021 |
+| Neues Erlebnis zu Verbindungsinformationen | Diese Verbesserung der Verbindungs-Benutzeroberfläche informiert Sie darüber, ob und wann Ihre Daten für das Reporting verwendet werden können. Sie können damit auch jegliche Probleme bei der Datenverarbeitung nachverfolgen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/manage-connections.html?lang=de) | 19. August 2021 |
 
 {style=&quot;table-layout:auto&quot;}
 
 ## Mai 2021 {#0521}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
 | Workspace: Vorherige Projektversionen | 20. Mai 2021 | Ermöglicht das Laden früherer Versionen eines Workspace-Projekts, um unerwünschte Änderungen rückgängig zu machen oder einfach zu einer bevorzugten älteren Version zurückzukehren. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/build-workspace-project/save-projects.html?lang=de) |
 
@@ -84,7 +84,7 @@ ht-degree: 100%
 
 ## April 2021 {#0421}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
 | Verbesserte Ansichten von Customer Journey Analytics-Daten | 22. April 2021 | Verbesserte Datenansichten erweitern Ihre Flexibilität bei der Erstellung von Metriken und Dimensionen aus XDM-Schema-Feldern. Sie können ein Zeichenfolgenfeld als Metrik verwenden. Sie können ein numerisches Feld als Dimension verwenden und mehrere Metriken aus demselben Feld mit verschiedenen Attributionsmodellen und Lookback-Fenstern erstellen. Darüber hinaus können Sie Metriken und Dimensionen über verschiedene Ansichten hinweg kompatibel machen, Komponenten aus dem Reporting ausblenden und Werte ein-/ausschließen, Bucketing verwenden und vieles mehr. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/data-views.html?lang=de) |
 | Workspace: Unterstützung für terminierte Berichte | 7. April 2021 | Terminierte Berichte werden jetzt in CJA unterstützt. |
@@ -95,7 +95,7 @@ ht-degree: 100%
 
 ## März 2021 {#0321}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
 | Unterstützung für [!UICONTROL Adobe Analytics-Dashboards] | 25. März 2021 | [!UICONTROL Customer Journey Analytics] (CJA) unterstützt jetzt den [!UICONTROL Scorecard Builder für Adobe Analytics-Dashboards] und die Mobile App. Auf diese Weise können Führungskräfte und Geschäftsbenutzer ihre Kanal-KPIs auf Basis von CJA-Daten anzeigen, indem sie dieselbe App verwenden, die sie möglicherweise bereits für Adobe Analytics verwenden. |
 | Analysis Workspace: **[!UICONTROL Komponenten]** > **[!UICONTROL Benutzervoreinstellungen]** | 25. März 2021 | Auf der Seite [!UICONTROL Komponenten] > [!UICONTROL Benutzervoreinstellungen] können Sie die Einstellungen von [!UICONTROL Analysis Workspace] und dessen zugehörige Komponenten für Ihren Benutzer verwalten. Die [!UICONTROL Benutzervoreinstellungen] gelten für alle neuen Projekte und Bedienfelder. <br>**Hinweis:** Die folgenden Einstellungen wurden auf die Seite [!UICONTROL Benutzervoreinstellungen] verschoben:<ul><li>Arbeitsbereich-Projekte: „Hilfe“ > „Tipps aktivieren“</li><li>Arbeitsbereich-Projekte: Option _Neue Projekte mit diesem Bedienfeld beginnen_ mit leerem Bedienfeld</li></ul> |
@@ -106,7 +106,7 @@ ht-degree: 100%
 
 ## Februar 2021 {#0221}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
 | Analysis Workspace – Komponentenauswahl | 4. Februar 2021 | Die Dropdown-/Dropzone-Komponente aus [!UICONTROL Quick Insights] wurde allen Ablagebereichen in [!UICONTROL Workspace] hinzugefügt. Diese Verbesserung ermöglicht es Ihnen, Optionen in einer Dropdown-Liste kompatibler Komponenten zu wählen oder den Raum weiterhin als Ablagebereich zu verwenden. |
 | Customer Journey Analytics-API | 18. Februar 2021 | Die Customer Journey Analytics-APIs sind jetzt verfügbar. Mit diesen APIs können Sie programmgesteuert Komponenten bearbeiten und Berichte abrufen. Weitere Informationen finden Sie in der [Customer Journey Analytics-API-Dokumentation](https://www.adobe.io/cja-apis/docs). |
@@ -115,7 +115,7 @@ ht-degree: 100%
 
 ## Januar 2021 {#0121}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
 | [!UICONTROL Geräte]- und [!UICONTROL Geografie]-Dimensionen | 30. Oktober 2020 | Geräte- und Geografie-Dimensionen sind jetzt standardmäßig als Teil des Support-Projekts [Standardsuche](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/standard-lookups.html?lang=de) im [!UICONTROL Quell-Connector] von Adobe Analytics verfügbar. Dieser dringend benötigte Zusatz erhöht die [Parität zwischen Adobe Analytics und CJA](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-overview/cja-aa.html?lang=de#cja-overview). |
 | Journey IQ: [!UICONTROL Kanalübergreifende Analyse] | 11. Januar 2021 | Journey IQ: Die [!UICONTROL kanalübergreifende Analyse] ermöglicht es Kunden, einen Adobe Analytics-Ereignis-Datensatz (oder einen anderen) in Adobe Experience Platform Data Lake von einem ID-Namespace zum anderen erneut zu verschlüsseln. In der Regel können Sie den Ereignis-Datensatz von einer Cookie-basierten ID in eine personenbasierte ID neu verschlüsseln. Auf diese Weise kann der neu verschlüsselte Datensatz mit anderen personenbasierten Daten in einer CJA-Verbindung kombiniert werden, wodurch eine geräte-/kanalübergreifende Analyse in Analysis Workspace möglich ist. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/cca/overview.html?lang=de#cja-connections) |
